fix: topics not showing up in topics list

--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -150,6 +150,11 @@ body {
   background-color: #dc2626;
 }
 
+.status-select.status-redo {
+  background-color: #e37401;
+}
+
+
 .version-navigation {
   display: flex !important;
   flex-wrap: nowrap;
